tests/ui/resolve/resolve-conflict-extern-crate-vs-extern-crate.rs
extern crate std;
//~^ ERROR the name `std` is defined multiple times

fn main(){}
